navbar menu modified

--- a/index.html
+++ b/index.html
@@ -2,10 +2,42 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.jpeg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/jpeg" href="/logo.jpeg" />
+
+    <!-- Responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>it_service</title>
+
+    <!-- Title -->
+    <title>RBT Global LLP | Bakery Raw Materials Supplier</title>
+
+    <!-- SEO -->
+    <meta
+      name="description"
+      content="RBT Global LLP is a trusted supplier of premium bakery raw materials including flour, cocoa, improvers, emulsifiers, and baking essentials."
+    />
+
+    <!-- Open Graph (WhatsApp / LinkedIn) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="RBT Global LLP | Bakery Raw Materials Supplier" />
+    <meta
+      property="og:description"
+      content="Premium quality bakery raw materials for bakeries, hotels, cafes, and food manufacturers."
+    />
+    <meta property="og:url" content="https://yourdomain.com/" />
+    <meta property="og:image" content="https://yourdomain.com/logo.jpeg" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="RBT Global LLP | Bakery Raw Materials Supplier" />
+    <meta
+      name="twitter:description"
+      content="Supplying high-quality bakery ingredients for professional baking."
+    />
+    <meta name="twitter:image" content="https://yourdomain.com/logo.jpeg" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
