meta tag made corrected

--- a/index.html
+++ b/index.html
@@ -1,45 +1,42 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/jpeg" href="/logo.png" />
+<head>
+  <meta charset="UTF-8" />
 
-    <!-- Responsive -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Favicon -->
 
-    <!-- Title -->
-    <title>RBT Global LLP | Bakery Raw Materials Supplier</title>
+  <!-- Responsive -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- SEO -->
-    <meta
-      name="description"
-      content="RBT Global LLP is a trusted supplier of premium bakery raw materials including flour, cocoa, improvers, emulsifiers, and baking essentials."
-    />
+  <!-- Title -->
+  <title>RBT Global LLP | Bakery Raw Materials Supplier</title>
 
-    <!-- Open Graph (WhatsApp / LinkedIn) -->
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="RBT Global LLP | Bakery Raw Materials Supplier" />
-    <meta
-      property="og:description"
-      content="Premium quality bakery raw materials for bakeries, hotels, cafes, and food manufacturers."
-    />
-    <meta property="og:url" content="https://yourdomain.com/" />
-    <meta property="og:image" content="https://yourdomain.com/logo.jpeg" />
+  <!-- SEO -->
+  <meta name="description"
+    content="RBT Global LLP is a trusted supplier of premium bakery raw materials including flour, cocoa, improvers, emulsifiers, and baking essentials." />
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="RBT Global LLP | Bakery Raw Materials Supplier" />
-    <meta
-      name="twitter:description"
-      content="Supplying high-quality bakery ingredients for professional baking."
-    />
-    <meta name="twitter:image" content="https://yourdomain.com/logo.jpeg" />
-  </head>
+  <!-- Open Graph (WhatsApp / LinkedIn) -->
+  <link rel="icon" type="image/png" href="/logo.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="RBT Global LLP | Bakery Raw Materials Supplier" />
+  <meta property="og:description"
+    content="RBT Global LLP is a trusted supplier of premium bakery raw materials including flour, cocoa, improvers, emulsifiers, bakery fats, and baking essentials for bakeries, hotels, cafes, and food manufacturers." />
+  <meta property="og:url" content="https://yourdomain.com/" />
+  <meta property="og:image" content="https://yourdomain.com/logo.png" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="RBT Global LLP | Bakery Raw Materials Supplier" />
+  <meta name="twitter:description"
+    content="Premium quality bakery ingredients and raw materials for professional baking." />
+  <meta name="twitter:image" content="https://yourdomain.com/logo.png" />
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
