meta tag issue resolved

--- a/index.html
+++ b/index.html
@@ -20,17 +20,14 @@
   <link rel="icon" type="image/png" href="/logo.png" />
 
   <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://rbt-global-llp.netlify.app/" />
   <meta property="og:title" content="RBT Global LLP | Bakery Raw Materials Supplier" />
   <meta property="og:description"
-    content="RBT Global LLP is a trusted supplier of premium bakery raw materials including flour, cocoa, improvers, emulsifiers, bakery fats, and baking essentials for bakeries, hotels, cafes, and food manufacturers." />
-  <meta property="og:url" content="https://yourdomain.com/" />
-  <meta property="og:image" content="https://yourdomain.com/logo.png" />
+    content="Premium bakery raw materials including flour, cocoa, emulsifiers, and more for bakeries & cafes." />
+  <meta property="og:image" content="https://rbt-global-llp.netlify.app/logo.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="RBT Global LLP | Bakery Raw Materials Supplier" />
-  <meta name="twitter:description"
-    content="Premium quality bakery ingredients and raw materials for professional baking." />
-  <meta name="twitter:image" content="https://yourdomain.com/logo.png" />
 
 </head>
 
