--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta property="og:title" content="RBT Global LLP | Bakery Raw Materials Supplier" />
   <meta property="og:description"
     content="Premium bakery raw materials including flour, cocoa, emulsifiers, and more for bakeries & cafes." />
-  <meta property="og:image" content="https://rbt-global-llp.netlify.app/logo.png" />
+  <meta property="og:image" content="https://rbt-global-llp.netlify.app/og-image.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
