--- a/index.html
+++ b/index.html
@@ -15,18 +15,34 @@
   <!-- SEO -->
   <meta name="description"
     content="RBT Global LLP is a trusted supplier of premium bakery raw materials including flour, cocoa, improvers, emulsifiers, and baking essentials." />
+  <meta name="keywords" content="bakery raw materials, flour, cocoa, emulsifiers, baking supplies, RBT Global" />
+  <meta name="author" content="RBT Global LLP" />
 
-  <!-- Open Graph (WhatsApp / LinkedIn) -->
-  <link rel="icon" type="image/png" href="/logo.png" />
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="apple-touch-icon" href="/logo.png" />
 
+  <!-- Open Graph (WhatsApp / LinkedIn / Facebook) -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://rbt-global-llp.netlify.app/" />
   <meta property="og:title" content="RBT Global LLP | Bakery Raw Materials Supplier" />
   <meta property="og:description"
     content="Premium bakery raw materials including flour, cocoa, emulsifiers, and more for bakeries & cafes." />
-  <meta property="og:image" content="https://rbt-global-llp.netlify.app/og-image.png" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
+  <meta property="og:image" content="https://rbt-global-llp.netlify.app/logo.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="600" />
+  <meta property="og:image:height" content="600" />
+  <meta property="og:site_name" content="RBT Global LLP" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="RBT Global LLP | Bakery Raw Materials Supplier" />
+  <meta name="twitter:description"
+    content="Premium bakery raw materials including flour, cocoa, emulsifiers, and more for bakeries & cafes." />
+  <meta name="twitter:image" content="https://rbt-global-llp.netlify.app/logo.png" />
+
+  <!-- WhatsApp & Other Messaging -->
+  <meta property="og:locale" content="en_US" />
 
 
 </head>
