--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
   <meta property="og:url" content="https://rbt-global-llp.netlify.app/" />
   <meta property="og:title" content="RBT Global LLP | Bakery Raw Materials Supplier" />
   <meta property="og:description"
-    content="Premium bakery raw materials including flour, cocoa, emulsifiers, and more for bakeries & cafes." />
+    content="Premium bakery raw materials including flour, cocoa, and more for bakeries & cafes." />
   <meta property="og:image" content="https://rbt-global-llp.netlify.app/logo.png" />
+  <meta property="og:image:secure_url" content="https://rbt-global-llp.netlify.app/logo.png" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="600" />
   <meta property="og:image:height" content="600" />
-  <meta property="og:site_name" content="RBT Global LLP" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
