--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/favicon.png" />
-  <link rel="apple-touch-icon" href="/logo.png" />
+  <link rel="apple-touch-icon" href="/logo2.jpeg" />
 
   <!-- Open Graph (WhatsApp / LinkedIn / Facebook) -->
   <meta property="og:type" content="website" />
@@ -28,9 +28,9 @@
   <meta property="og:title" content="RBT Global LLP | Bakery Raw Materials Supplier" />
   <meta property="og:description"
     content="Premium bakery raw materials including flour, cocoa, and more for bakeries & cafes." />
-  <meta property="og:image" content="https://rbt-global-llp.netlify.app/logo.png" />
-  <meta property="og:image:secure_url" content="https://rbt-global-llp.netlify.app/logo.png" />
-  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image" content="https://rbt-global-llp.netlify.app/logo2.jpeg" />
+  <meta property="og:image:secure_url" content="https://rbt-global-llp.netlify.app/logo2.jpeg" />
+  <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="600" />
   <meta property="og:image:height" content="600" />
 
@@ -39,7 +39,7 @@
   <meta name="twitter:title" content="RBT Global LLP | Bakery Raw Materials Supplier" />
   <meta name="twitter:description"
     content="Premium bakery raw materials including flour, cocoa, emulsifiers, and more for bakeries & cafes." />
-  <meta name="twitter:image" content="https://rbt-global-llp.netlify.app/logo.png" />
+  <meta name="twitter:image" content="https://rbt-global-llp.netlify.app/logo2.jpeg" />
 
   <!-- WhatsApp & Other Messaging -->
   <meta property="og:locale" content="en_US" />
