--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <meta name="author" content="RBT Global LLP" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/favicon.png" />
-  <link rel="apple-touch-icon" href="/logo2.jpeg" />
+  <link rel="icon" type="image/png" href="/logo.jpg" />
+  <link rel="apple-touch-icon" href="/logo.jpg" />
 
   <!-- Open Graph (WhatsApp / LinkedIn / Facebook) -->
   <meta property="og:type" content="website" />
@@ -28,8 +28,8 @@
   <meta property="og:title" content="RBT Global LLP | Bakery Raw Materials Supplier" />
   <meta property="og:description"
     content="Premium bakery raw materials including flour, cocoa, and more for bakeries & cafes." />
-  <meta property="og:image" content="https://rbt-global-llp.netlify.app/logo2.jpeg" />
-  <meta property="og:image:secure_url" content="https://rbt-global-llp.netlify.app/logo2.jpeg" />
+  <meta property="og:image" content="https://rbt-global-llp.netlify.app/logo.jpg" />
+  <meta property="og:image:secure_url" content="https://rbt-global-llp.netlify.app/logo.jpg" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="600" />
   <meta property="og:image:height" content="600" />
@@ -39,7 +39,7 @@
   <meta name="twitter:title" content="RBT Global LLP | Bakery Raw Materials Supplier" />
   <meta name="twitter:description"
     content="Premium bakery raw materials including flour, cocoa, emulsifiers, and more for bakeries & cafes." />
-  <meta name="twitter:image" content="https://rbt-global-llp.netlify.app/logo2.jpeg" />
+  <meta name="twitter:image" content="https://rbt-global-llp.netlify.app/logo.jpg" />
 
   <!-- WhatsApp & Other Messaging -->
   <meta property="og:locale" content="en_US" />
