--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     content="Premium bakery raw materials including flour, cocoa, and more for bakeries & cafes." />
   <meta property="og:image" content="https://rbt-global-llp.netlify.app/logo.jpg" />
   <meta property="og:image:secure_url" content="https://rbt-global-llp.netlify.app/logo.jpg" />
-  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:type" content="image/jpg" />
   <meta property="og:image:width" content="600" />
   <meta property="og:image:height" content="600" />
 
