--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
-
-  <!-- Favicon -->
 
   <!-- Responsive -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,43 +10,60 @@
   <title>RBT Global LLP | Bakery Raw Materials Supplier</title>
 
   <!-- SEO -->
-  <meta name="description"
-    content="RBT Global LLP is a trusted supplier of premium bakery raw materials including flour, cocoa, improvers, emulsifiers, and baking essentials." />
-  <meta name="keywords" content="bakery raw materials, flour, cocoa, emulsifiers, baking supplies, RBT Global" />
+  <meta
+    name="description"
+    content="RBT Global LLP is a trusted supplier of premium bakery raw materials including flour, cocoa, improvers, emulsifiers, and baking essentials."
+  />
+  <meta
+    name="keywords"
+    content="bakery raw materials, flour, cocoa, emulsifiers, baking supplies, RBT Global"
+  />
   <meta name="author" content="RBT Global LLP" />
+
+  <!-- Canonical (VERY IMPORTANT) -->
+  <link rel="canonical" href="https://rbtgloballlp.com/" />
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/og-image-v1.jpg" />
   <link rel="apple-touch-icon" href="/og-image-v1.jpg" />
 
-  <!-- Open Graph (WhatsApp / LinkedIn / Facebook) -->
+  <!-- Open Graph (WhatsApp / Facebook / LinkedIn) -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://rbt-global-llp.netlify.app/" />
+  <meta property="og:site_name" content="RBT Global LLP" />
+  <meta property="og:url" content="https://rbtgloballlp.com/" />
   <meta property="og:title" content="RBT Global LLP | Bakery Raw Materials Supplier" />
-  <meta property="og:description"
-    content="Premium bakery raw materials including flour, cocoa, and more for bakeries & cafes." />
-  <meta property="og:image" content="https://rbt-global-llp.netlify.app/og-image-v1.jpg" />
-  <meta property="og:image:secure_url" content="https://rbt-global-llp.netlify.app/og-image-v1.jpg" />
-  <meta property="og:image:type" content="image/jpg" />
-  <meta property="og:image:width" content="600" />
-  <meta property="og:image:height" content="600" />
+  <meta
+    property="og:description"
+    content="Premium bakery raw materials including flour, cocoa, improvers, emulsifiers, and baking essentials."
+  />
+  <meta
+    property="og:image"
+    content="https://rbtgloballlp.com/og-image-v1.jpg"
+  />
+  <meta
+    property="og:image:secure_url"
+    content="https://rbtgloballlp.com/og-image-v1.jpg"
+  />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:locale" content="en_US" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="RBT Global LLP | Bakery Raw Materials Supplier" />
-  <meta name="twitter:description"
-    content="Premium bakery raw materials including flour, cocoa, emulsifiers, and more for bakeries & cafes." />
-  <meta name="twitter:image" content="https://rbt-global-llp.netlify.app/og-image-v1.jpg" />
-
-  <!-- WhatsApp & Other Messaging -->
-  <meta property="og:locale" content="en_US" />
-
-
+  <meta
+    name="twitter:description"
+    content="Premium bakery raw materials including flour, cocoa, emulsifiers, and baking essentials."
+  />
+  <meta
+    name="twitter:image"
+    content="https://rbtgloballlp.com/og-image-v1.jpg"
+  />
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
-
 </html>
